--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/Index.css">
+    <link rel="stylesheet" href="../Css/index2.css">
 </head>
 <body>
 
