--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
     
     <title>Document</title>
+    <link rel="stylesheet" href="./Css/index.css">
 </head>
 <body>
-    
+    <nav>
+        <ol>
+            <li>  
+                <a src = "./HTML/index1.html">Index1</a>
+            </li>
+            <li>
+                <a src = "HTML/index2.html">Index2</a>
+            </li>
+            <li>
+                <a src="./HTML/Index3.html">Index3</a>
+            </li>
+        </ol>
+
+    </nav>    
+
+
+    <script src = "./JS/Index.js"></script>
 </body>
 </html>
