--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <nav>
         <ol>
             <li>  
-                <a src = "./HTML/index1.html">Index1</a>
+                <a href = "./HTML/index1.html">Index1</a>
             </li>
             <li>
-                <a src = "HTML/index2.html">Index2</a>
+                <a href = "HTML/index2.html">Index2</a>
             </li>
             <li>
-                <a src="./HTML/Index3.html">Index3</a>
+                <a href="./HTML/Index3.html">Index3</a>
             </li>
         </ol>
 
