--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../Css/index3.css">
 </head>
 <body>
+    <nav id = "Nav"></nav>    
 
 
 
@@ -13,4 +14,4 @@
 
     <script src="../JS/Index.js"></script>
 </body>
-</html>l
+</html>
