--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../Css/index1.css">
 </head>
 <body>
-
+    <nav id = "Nav"></nav>    
 
 
 
@@ -13,4 +13,4 @@
 
     <script src="../JS/Index.js"></script>
 </body>
-</html>l
+</html>
