--- a/index.html
+++ b/index.html
@@ -6,20 +6,7 @@
     <link rel="stylesheet" href="./Css/index.css">
 </head>
 <body>
-    <nav>
-        <ol>
-            <li>  
-                <a href = "./HTML/index1.html">Index1</a>
-            </li>
-            <li>
-                <a href = "HTML/index2.html">Index2</a>
-            </li>
-            <li>
-                <a href="./HTML/Index3.html">Index3</a>
-            </li>
-        </ol>
-
-    </nav>    
+    <nav id = "Nav"></nav>    
 
 
     <script src = "./JS/Index.js"></script>
