--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -5,7 +5,20 @@
     <link rel="stylesheet" href="../Css/index1.css">
 </head>
 <body>
-    <nav id = "Nav"></nav>    
+    <nav id = "Nav">
+        <ol>
+            <li>  
+                <a href = "./HTML/index1.html">Index1</a>
+            </li>
+            <li>
+                <a href = "HTML/index2.html">Index2</a>
+            </li>
+            <li>
+                <a href="./HTML/Index3.html">Index3</a>
+            </li>
+        </ol>
+    </nav>    
+
 
 
 
