--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" href="./Css/index.css">
 </head>
 <body>
-    <nav id = "Nav"></nav>    
+    <nav id = "Nav">
+        <ol>
+            <li>  
+                <a href = "./HTML/index1.html">Index1</a>
+            </li>
+            <li>
+                <a href = "HTML/index2.html">Index2</a>
+            </li>
+            <li>
+                <a href="./HTML/Index3.html">Index3</a>
+            </li>
+        </ol>
+    </nav>    
 
 
     <script src = "./JS/Index.js"></script>
