--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -8,13 +8,13 @@
     <nav id = "Nav">
         <ol>
             <li>  
-                <a href = "./HTML/index1.html">Index1</a>
+                <a href = "./index1.html">Index1</a>
             </li>
             <li>
-                <a href = "HTML/index2.html">Index2</a>
+                <a href = "./index2.html">Index2</a>
             </li>
             <li>
-                <a href="./HTML/Index3.html">Index3</a>
+                <a href="../index.html">Home</a>
             </li>
         </ol>
     </nav>    
