--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -8,13 +8,13 @@
     <nav id = "Nav">
         <ol>
             <li>  
-                <a href = "../index.html">Home</a>
+                <a class = "NavButton" href = "../index.html">Home</a>
             </li>
             <li>
-                <a href = "./index2.html">Index2</a>
+                <a class = "NavButton" href = "./index2.html">Index2</a>
             </li>
             <li>
-                <a href="./Index3.html">Index3</a>
+                <a class = "NavButton" href="./Index3.html">Index3</a>
             </li>
         </ol>
     </nav>    
