--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -7,14 +7,20 @@
 <body>
     <nav id = "Nav">
         <ol>
-            <li>  
-                <a class = "NavButton" href = "../index.html">Home</a>
+            <li> 
+                <div class = "NavButton"> 
+                    <a class = "NavButton" href = "../index.html">Home</a>
+                </div>
             </li>
             <li>
-                <a class = "NavButton" href = "./index2.html">Index2</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href = "./index2.html">Index2</a>
+                </div>
             </li>
             <li>
-                <a class = "NavButton" href="./Index3.html">Index3</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href="./Index3.html">Index3</a>
+                </div>
             </li>
         </ol>
     </nav>    
