--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -8,13 +8,19 @@
     <nav id = "Nav">
         <ol>
             <li>  
-                <a href = "./index1.html">Index1</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href = "./index1.html">Index1</a>
+                </div>
             </li>
             <li>
-                <a href = "../index.html">Home</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href = "../index.html">Home</a>
+                </div>
             </li>
             <li>
-                <a href="./Index3.html">Index3</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href="./Index3.html">Index3</a>
+                </div>
             </li>
         </ol>
     </nav>    
