--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
     <nav id = "Nav">
         <ol>
             <li>  
-                <a href = "./HTML/index1.html">Index1</a>
+               <div class = "NavButton" > 
+                    <a href = "./HTML/index1.html">Index1</a>    
+               </div>
             </li>
             <li>
-                <a href = "HTML/index2.html">Index2</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href = "HTML/index2.html">Index2</a>
+                </div>
+                
             </li>
             <li>
-                <a href="./HTML/Index3.html">Index3</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href="./HTML/Index3.html">Index3</a>
+                </div>
             </li>
         </ol>
     </nav>    
