--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -7,14 +7,20 @@
 <body>
     <nav id = "Nav">
         <ol>
-            <li>  
-                <a href = "./index1.html">Index1</a>
+            <li>
+                <div class = "NavButton">  
+                    <a class = "NavButton" href = "./index1.html">Index1</a>
+                </div>
             </li>
             <li>
-                <a href = "./index2.html">Index2</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href = "./index2.html">Index2</a>
+                </div>
             </li>
             <li>
-                <a href="../index.html">Home</a>
+                <div class = "NavButton">
+                    <a class = "NavButton" href="../index.html">Home</a>
+                </div>
             </li>
         </ol>
     </nav>    
