--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
         const APIKEY = "4331565397-pplqj2jubff9854inc56n37vigfsnjj7.apps.googleusercontent.com"
         var access_token
         var GoogleClient 
-        GoogleClient = google.accounts.oauth2.initTokenClient({
-        client_id: APIKEY,
-        scope: 'https://www.googleapis.com/auth/userinfo.profile',
-        callback: (tokenResponse) => {
-            access_token = tokenResponse.access_token;
-        },
-        })  
-        function getToken() {
-        client.requestAccessToken();
+        function initClient(){
+            GoogleClient = google.accounts.oauth2.initTokenClient({
+                client_id: APIKEY,
+                scope: 'https://www.googleapis.com/auth/userinfo.profile',
+                callback: (tokenResponse) => {
+                    access_token = tokenResponse.access_token;
+                },
+            })  
+            GoogleClient.requestAccessToken();
         }
+
         function GetUserInfo(){
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET','https://www.googleapis.com/oauth2/v1/userinfo' +'?access_token='+encodeURIComponent(access_token));
-        xhr.setRequestHeader('Content-Type','application/json')
-        xhr.send();   
-        xhr.onreadystatechange = function(){
-            if (this.readyState == 4 && this.status == 200) {
-                var Data = JSON.parse(this.responseText);
-                SetData(Data);
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET','https://www.googleapis.com/oauth2/v1/userinfo' +'?access_token='+encodeURIComponent(access_token));
+            xhr.setRequestHeader('Content-Type','application/json')
+            xhr.send();   
+            xhr.onreadystatechange = function(){
+                if (this.readyState == 4 && this.status == 200) {
+                    var Data = JSON.parse(this.responseText);
+                    SetData(Data);
+                }
             }
         }
-        }
+
         function SetData(Data){
             console.log(Data)
         }
-
-
 
     </script>
     <script src = "./JS/Index.js"></script>
