--- a/index.html
+++ b/index.html
@@ -4,47 +4,40 @@
     
     <title>Document</title>
     <link rel="stylesheet" href="./Css/index.css">
-    <script src="https://accounts.google.com/gsi/client" onload="initClient()" async defer></script>
+    
 </head>
 <body>
+    <script src="https://accounts.google.com/gsi/client"  async defer></script>
+    <div id="g_id_onload"
+        data-client_id="1019198432263-683081q1rd1oo4n5acmv6q3h84fiktcj.apps.googleusercontent.com"
+        data-context="signin"
+        data-ux_mode="popup"
+        data-callback="handleCredentialResponse"
+        data-nonce=""
+        data-auto_prompt="false">
+    </div>
 
-    <button id = "LoginButton" onclick="Login()">Login in with Google</button>
+    <div class="g_id_signin"
+        data-type="standard"
+        data-shape="pill"
+        data-theme="filled_black"
+        data-text="signin_with"
+        data-size="large"
+        data-logo_alignment="left"
+        style="position: absolute;right: 20px;">
+    </div>
+
+
     <script>
-        const APIKEY = "4331565397-pplqj2jubff9854inc56n37vigfsnjj7.apps.googleusercontent.com"
-        var access_token
-        var GoogleClient 
-        function initClient(){
-            GoogleClient = google.accounts.oauth2.initTokenClient({
-                client_id: APIKEY,
-                scope: 'https://www.googleapis.com/auth/userinfo.profile',
-                callback: (tokenResponse) => {
-                    access_token = tokenResponse.access_token;
-                },
-            })  
-        }
-        function Login(){
-            GoogleClient.requestAccessToken();
-        }
-
-
-        function GetUserInfo(){
-            var xhr = new XMLHttpRequest();
-            xhr.open('GET','https://www.googleapis.com/oauth2/v1/userinfo' +'?access_token='+encodeURIComponent(access_token));
-            xhr.setRequestHeader('Content-Type','application/json')
-            xhr.send();   
-            xhr.onreadystatechange = function(){
-                if (this.readyState == 4 && this.status == 200) {
-                    var Data = JSON.parse(this.responseText);
-                    SetData(Data);
-                }
-            }
-        }
-
-        function SetData(Data){
+        function handleCredentialResponse(Data){
             console.log(Data)
         }
 
+
     </script>
+
+
+
     <script src = "./JS/Index.js"></script>
 </body>
 </html>
