--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             console.log(Data)
             var Background = document.getElementById("Background");
             var LoginButton = document.getElementById("g_id_signin");
+            var OnLoad = document.getElementById("g_id_onload");
             Background.style.filter = "blur(0px)"
             LoginButton.remove();
-
+            OnLoad.remove();
         }
 
 
