--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         function handleCredentialResponse(Data){
             console.log(Data)
             var Background = document.getElementById("Background");
-            var LoginButton = document.getElementById("g_id_signin");
+            var LoginButton = document.getElementsByClassName("g_id_signin");
             var OnLoad = document.getElementById("g_id_onload");
             Background.style.filter = "blur(0px)"
             LoginButton.remove();
