--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         data-theme="filled_black"
         data-text="signin_with"
         data-size="large"
-        data-logo_alignment="left"
-        style="position: absolute;right: 50vw;top:50vh;">
+        data-logo_alignment="left">
     </div>
 
     <script>
@@ -32,10 +31,9 @@
             console.log(Data)
             var Background = document.getElementById("Background");
             var LoginButton = document.getElementsByClassName("g_id_signin");
-            var OnLoad = document.getElementById("g_id_onload");
-            Background.style.filter = "blur(0px)"
-            LoginButton.remove();
-            OnLoad.remove();
+            LoginButton.style.top = "0px";
+            LoginButton.style.right = "20px";
+            Background.style.filter = "blur(0px)";
         }
 
 
