--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     </div>
 
     <script>
+        var TestingMode = true
+        if(TestingMode == true){
+            var Background = document.getElementById("Background");
+            var LoginButton = document.getElementsByClassName("g_id_signin")[0];
+            LoginButton.style.top = "0px";
+            LoginButton.style.right = "20px";
+            Background.style.filter = "blur(0px)";
+        }
         function handleCredentialResponse(Data){
             console.log(Data)
             var Background = document.getElementById("Background");
@@ -35,8 +43,6 @@
             LoginButton.style.right = "20px";
             Background.style.filter = "blur(0px)";
         }
-
-
     </script>
 
 
