--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -5,31 +5,22 @@
     <link rel="stylesheet" href="../Css/index1.css">
 </head>
 <body>
-    <nav id = "Nav">
-        <ol>
-            <li> 
-                <div class = "NavButton"> 
-                    <a class = "NavButton" href = "../index.html">Home</a>
-                </div>
-            </li>
-            <li>
-                <div class = "NavButton">
-                    <a class = "NavButton" href = "./index2.html">Index2</a>
-                </div>
-            </li>
-            <li>
-                <div class = "NavButton">
-                    <a class = "NavButton" href="./Index3.html">Index3</a>
-                </div>
-            </li>
-        </ol>
-    </nav>    
+    <div id = "Background">
+        
 
 
 
 
-    
 
+
+
+
+
+
+
+
+
+    </div>
     <script src="../JS/Index.js"></script>
 </body>
 </html>
