--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -5,32 +5,22 @@
     <link rel="stylesheet" href="../Css/index3.css">
 </head>
 <body>
-    <nav id = "Nav">
-        <ol>
-            <li>
-                <div class = "NavButton">  
-                    <a class = "NavButton" href = "./index1.html">Index1</a>
-                </div>
-            </li>
-            <li>
-                <div class = "NavButton">
-                    <a class = "NavButton" href = "./index2.html">Index2</a>
-                </div>
-            </li>
-            <li>
-                <div class = "NavButton">
-                    <a class = "NavButton" href="../index.html">Home</a>
-                </div>
-            </li>
-        </ol>
-    </nav>    
+    <div id = "Background">
+        
 
 
 
 
 
-    
 
+
+
+
+
+
+
+
+    </div>
     <script src="../JS/Index.js"></script>
 </body>
 </html>
