Shadow, Link, Jumpscare

--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id = "Background">
-        
+        <img id = "blink" class="JumpScare" src="../Imgs/Shadow man.png" alt="BRUH">
 
 
 
