--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -7,7 +7,7 @@
 <body>
     <div id = "Background">
         <img id = "blink" class="JumpScare" src="../Imgs/Shadow man.png" alt="BRUH">
-
+        <img class="JumpScare" id="jump" src="../Imgs/Jumpscareindex2.jpg" alt="BRUH">
 
 
 
