--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id = "Background">
-        <img id="Door" src="../Imgs/Jumpscareindex1.png" alt="BRUH">
+        <img Link = "/HTML/Index2.html" id="Door" src="../Imgs/Jumpscareindex1.png" alt="BRUH">
 
 
 
