--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -21,6 +21,8 @@
 
 
     </div>
+    <img class="JumpScare"src="../Imgs/Shadow.png" alt="Jumpscare">
+   
     <script src="../JS/Index.js"></script>
 </body>
 </html>
