--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -9,7 +9,7 @@
         <img id = "blink" class="JumpScare" src="../Imgs/Shadow man.png" alt="BRUH">
         <img class="JumpScare" id="jump" src="../Imgs/Jumpscareindex2.jpg" alt="BRUH">
         <div class="note" id="note1">
-        
+            <img src="../Imgs/TornPage.png" alt="BRUH">
         </div>
         <div class="note" id="note2">
             
