--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -22,7 +22,7 @@
 
     </div>
     <img class="JumpScare"src="../Imgs/Shadow.png" alt="Jumpscare">
-   
+   <link href="../Imgs/Shadow.png" rel="img" type="Imgs">
     <script src="../JS/Index.js"></script>
 </body>
 </html>
