--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div id = "Background">
-        <img id = "blink" class="JumpScare" src="../Imgs/Shadow man.png" alt="BRUH">
-        <img class="JumpScare" id="jump" src="../Imgs/Jumpscareindex2.jpg" alt="BRUH">
+        <img Count = "2:1" id = "blink" class="JumpScare" src="../Imgs/Shadow man.png" alt="BRUH">
+        <img Count = "2:2" class="JumpScare" id="jump" src="../Imgs/Jumpscareindex2.jpg" alt="BRUH">
 
 
 
