--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -11,7 +11,9 @@
         <img class="note" id="note1" src = "../Imgs/TornPage.png"alt="BRUH">
         <img class="note" id="note2" src = "../Imgs/TornPage.png"alt="BRUH">
         <img class="note" id="note3" src = "../Imgs/TornPage.png"alt="BRUH">
-        <div id = "Door"></div>
+        <div id = "Door">
+            <link href="../HTML/index2_2.html">
+        </div>
 
 
 
