--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -7,6 +7,8 @@
 <body>
     <div id = "Background">
         <img Link = "/HTML/index2.html" id="Door" src="../Imgs/Jumpscareindex1.png" alt="BRUH">
+        <img id="scare" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
+        <img class = "fakenote" id="fakenote" src = "../Imgs/TornPage.png">
 
 
 
@@ -17,12 +19,7 @@
 
 
 
-
-
-
-    </div>
-    <img class="JumpScare"src="../Imgs/Shadow.png" alt="Jumpscare">
-   <link href="../Imgs/Shadow.png" rel="img" type="Imgs">
+    </div>   
     <script src="../JS/Index.js"></script>
 </body>
 </html>
