--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -11,9 +11,7 @@
         <img class="note" id="note1" src = "../Imgs/TornPage.png"alt="BRUH">
         <img class="note" id="note2" src = "../Imgs/TornPage.png"alt="BRUH">
         <img class="note" id="note3" src = "../Imgs/TornPage.png"alt="BRUH">
-        <div id = "Door">
-            <link href="../HTML/index2_2.html">
-        </div>
+        <div id = "Door" Link = "/HTML/index2_2.html"></div>
 
 
 
