--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -9,7 +9,7 @@
         <img Link = "/HTML/index2.html" id="Door" src="../Imgs/Jumpscareindex1.png" alt="BRUH">
         <img id="scare" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
         <img class = "fakenote" id="fakenote" src = "../Imgs/TornPage.png">
-
+    <div id= "Door"></div>
 
 
 
