--- a/HTML/index2_3.html
+++ b/HTML/index2_3.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <div id = "Background">
-        
+        <img class="note"src="../Imgs/TornPage.png" id="note1">
+        <img class="note"src="../Imgs/TornPage.png" id="note2">
+        <img class="note"src="../Imgs/TornPage.png" id="note3">
+        <img class="note"src="../Imgs/TornPage.png" id="note4">
+        <img class="note"src="../Imgs/TornPage.png" id="note5">
         <div id = "Door"></div>
     </div>
     <script src="../JS/Index.js"></script>
