--- a/HTML/stair.html
+++ b/HTML/stair.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index1_2.css">
+    <link rel="stylesheet" href="../Css/stairs.css">
 </head>
 <body>
     <div id = "Background">
         <img class = "note" id="note" src = "../Imgs/TornPage.png">
-      
+      <div id="Door" Link=/HTML/index2_3.html></div>
 
 
 
