--- a/HTML/index2_2.html
+++ b/HTML/index2_2.html
@@ -13,7 +13,7 @@
         <img class="note"src="../Imgs/TornPage.png" id="note5">
         <img class="note"src="../Imgs/TornPage.png" id="note6">
         <img class="note"src="../Imgs/TornPage.png" id="note7">
-        <div id = "Door" Link= "/HTML/index2_3.html"></div>
+        <div id = "Door" Link= "/HTML/stair.html"></div>
     </div>
     <script src="../JS/Index.js"></script>
 
