--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -9,9 +9,9 @@
 
         <img Count = "2:1" id = "blink" class="JumpScare" src="../Imgs/Shadow man.png" alt="BRUH">
         <img Count = "2:2" class="JumpScare" id="jump" src="../Imgs/Jumpscareindex2.jpg" alt="BRUH">
-        <img class="note" id="note1" src = "../Imgs/TornPage.png"alt="BRUH">
-        <img class="note" id="note2" src = "../Imgs/TornPage.png"alt="BRUH">
-        <img class="note" id="note3" src = "../Imgs/TornPage.png"alt="BRUH">
+        <img NoteID = "2" class="note" id="note1" src = "../Imgs/TornPage.png"alt="BRUH">
+        <img NoteID = "2" class="note" id="note2" src = "../Imgs/TornPage.png"alt="BRUH">
+        <img NoteID = "2" class="note" id="note3" src = "../Imgs/TornPage.png"alt="BRUH">
         <div id = "Door" Link = "/HTML/index2_2.html"></div>
 
 
