--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -7,9 +7,8 @@
 <body>
     <div id = "Background">
         <img id="Door" Link = "/HTML/index2.html" src="../Imgs/Jumpscareindex1.png" alt="BRUH">
-        <img id="scare" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
+       <a href="../HTML/index1_2.html"><img id="scare" Link="/HTML/index1_2.html" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" ></a>
         <img class = "fakenote" id="fakenote" src = "../Imgs/TornPage.png">
-      
 
 
 
