--- a/HTML/index1_2.html
+++ b/HTML/index1_2.html
@@ -7,7 +7,8 @@
 <body>
     <div id = "Background">
         <img class = "note" id="note" src = "../Imgs/TornPage.png">
-      
+        
+        <img id="scare" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
 
 
 
