--- a/HTML/index1_2.html
+++ b/HTML/index1_2.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     <div id = "Background">
-        <img class = "note" id="note" src = "../Imgs/TornPage.png">
-        
-        <img id="scare" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
+        <img NoteID = "1" class = "note" id = "note" src = "../Imgs/TornPage.png">
+        <img id = "scare" Count = "1:1" class="JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
 
 
 
