--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id = "Background">
         <div id = "Door" Link = "/HTML/index1.html"></div>
         <img id="scare" Count = "0:1" class="JumpScare" src="./Imgs/Shadow.png" alt="Jumpscare" >
-        <img id="note" src="./Imgs/TornPage.png" alt="BRUH">
+        <img NoteID = "0" id="note" class = "note" src="./Imgs/TornPage.png" alt="BRUH">
             
     </div>
     <script src="https://accounts.google.com/gsi/client"  async defer></script>
