--- a/HTML/index2_3.html
+++ b/HTML/index2_3.html
@@ -6,14 +6,13 @@
 </head>
 <body>
     <div id = "Background">
-        <img NoteID = "2" class="note" src="../Imgs/TornPage.png" id="note1">
-        <img NoteID = "2" class="note" src="../Imgs/TornPage.png" id="note2">
-        <img NoteID = "2" class="note" src="../Imgs/TornPage.png" id="note3">
-        <img NoteID = "2" class="note" src="../Imgs/TornPage.png" id="note4">
-        <img NoteID = "2" class="note" src="../Imgs/TornPage.png" id="note5">
-        <div id = "Door"></div>
+        <img NoteID = "2:11" class = "note" src = "../Imgs/TornPage.png" id = "note1">
+        <img NoteID = "2:12" class = "note" src = "../Imgs/TornPage.png" id = "note2">
+        <img NoteID = "2:13" class = "note" src = "../Imgs/TornPage.png" id = "note3">
+        <img NoteID = "2:14" class = "note" src = "../Imgs/TornPage.png" id = "note4">
+        <img NoteID = "2:15" class = "note" src = "../Imgs/TornPage.png" id = "note5">
+        <div Link  = "/HTML/index3.html" id = "Door"></div>
     </div>
-    <script src="../JS/Index.js"></script>
-
+    <script src = "../JS/Index.js"></script>
 </body>
 </html>
