--- a/HTML/stair.html
+++ b/HTML/stair.html
@@ -6,17 +6,8 @@
 </head>
 <body>
     <div id = "Background">
-        <img class = "note" id="note" src = "../Imgs/TornPage.png">
-        <div id="Door" Link=/HTML/index2_3.html></div>
-
-
-
-
-
-
-
-
-
+        <img NoteID = "1:4" class = "note" id="note" src = "../Imgs/TornPage.png">
+        <div id = "Door" Link=/HTML/index2_3.html></div>
     </div>   
     <script src="../JS/Index.js"></script>
 </body>
