--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <div id = "Background">
+        <img NoteID = "3:1" class = "note" id = "note1" src = "../Imgs/TornPage.png">
+        <img NoteID = "3:2" class = "note" id = "note2" src = "../Imgs/TornPage.png">
+        <img NoteID = "3:3" class = "note" id = "note3" src = "../Imgs/TornPage.png">
+        <img NoteID = "3:4" class = "note" id = "note4" src = "../Imgs/TornPage.png">
         
     </div>
     <script src="../JS/Index.js"></script>
