--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -10,7 +10,7 @@
         <img NoteID = "3:2" class = "note" id = "note2" src = "../Imgs/TornPage.png">
         <img NoteID = "3:3" class = "note" id = "note3" src = "../Imgs/TornPage.png">
         <img NoteID = "3:4" class = "note" id = "note4" src = "../Imgs/TornPage.png">
-        
+        <div id = "Door" Link = "/HTML/index3_2.html"></div>
     </div>
     <script src="../JS/Index.js"></script>
 </body>
