--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index1.css">
+    <link rel = "stylesheet" href = "../Css/index1.css">
 </head>
 <body>
     <div id = "Background">
-        <img id = "Door" Link = "/HTML/index2.html" src = "../Imgs/Jumpscareindex1.png" alt = "BRUH">
-        <img id = "scare" class = "Door" Link = "/HTML/index1_2.html" Count = "1:1" class = "JumpScare" src="../Imgs/Shadow.png" alt="Jumpscare" >
-        <img class = "fakenote" id = "fakenote" src = "../Imgs/TornPage.png">
+        <img draggable = "false" id = "Door" Link = "/HTML/index2.html" src = "../Imgs/Jumpscareindex1.png" alt = "BRUH">
+        <img draggable = "false" id = "scare" class = "Door" Link = "/HTML/index1_2.html" Count = "1:1" class = "JumpScare" src = "../Imgs/Shadow.png" alt = "Jumpscare" >
+        <img draggable = "false" class = "fakenote" id = "fakenote" src = "../Imgs/TornPage.png">
 
 
 
@@ -19,6 +19,6 @@
 
 
     </div>   
-    <script src="../JS/Index.js"></script>
+    <script src = "../JS/Index.js"></script>
 </body>
 </html>
