--- a/HTML/index1_2.html
+++ b/HTML/index1_2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index1_2.css">
+    <link rel = "stylesheet" href = "../Css/index1_2.css">
 </head>
 <body>
     <div id = "Background">
-        <img NoteID = "1:1" class = "note" id = "note" src = "../Imgs/TornPage.png">
-        <img id = "scare" Count = "1:2" class = "JumpScare" src = "../Imgs/Shadow.png" alt = "Jumpscare" >
+        <img draggable = "false" NoteID = "1:1" class = "note" id = "note" src = "../Imgs/TornPage.png">
+        <img draggable = "false" id = "scare" Count = "1:2" class = "JumpScare" src = "../Imgs/Shadow.png" alt = "Jumpscare" >
     </div>   
     <script src = "../JS/Index.js"></script>
 </body>
