--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index2.css">
+    <link rel = "stylesheet" href = "../Css/index2.css">
 </head>
 <body>
     <div id = "Background">
 
-        <img Count = "2:1" id = "blink" class = "JumpScare" src = "../Imgs/Shadow man.png" alt = "BRUH">
-        <img Count = "2:2" class = "JumpScare" id = "jump" src = "../Imgs/Jumpscareindex2.jpg" alt = "BRUH">
-        <img NoteID = "2:1" class = "note" id = "note1" src = "../Imgs/TornPage.png" alt = "BRUH">
-        <img NoteID = "2:2" class = "note" id = "note2" src = "../Imgs/TornPage.png" alt = "BRUH">
-        <img NoteID = "2:3" class = "note" id = "note3" src = "../Imgs/TornPage.png" alt = "BRUH">
+        <img draggable = "false" Count = "2:1" id = "blink" class = "JumpScare" src = "../Imgs/Shadow man.png" alt = "BRUH">
+        <img draggable = "false" Count = "2:2" class = "JumpScare" id = "jump" src = "../Imgs/Jumpscareindex2.jpg" alt = "BRUH">
+        <img draggable = "false" NoteID = "2:1" class = "note" id = "note1" src = "../Imgs/TornPage.png" alt = "BRUH">
+        <img draggable = "false" NoteID = "2:2" class = "note" id = "note2" src = "../Imgs/TornPage.png" alt = "BRUH">
+        <img draggable = "false" NoteID = "2:3" class = "note" id = "note3" src = "../Imgs/TornPage.png" alt = "BRUH">
         <div id = "Door" Link = "/HTML/index2_2.html"></div>
     </div>
     <script src = "../JS/Index.js"></script>
