--- a/HTML/index2_2.html
+++ b/HTML/index2_2.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index2_2.css">
+    <link rel = "stylesheet" href = "../Css/index2_2.css">
 </head>
 <body>
     <div id = "Background">
-        <img NoteID = "2:4" class = "note" src = "../Imgs/TornPage.png" id = "note1">
-        <img NoteID = "2:5" class = "note" src = "../Imgs/TornPage.png" id = "note2">
-        <img NoteID = "2:6" class = "note" src = "../Imgs/TornPage.png" id = "note3">
-        <img NoteID = "2:7" class = "note" src = "../Imgs/TornPage.png" id = "note4">
-        <img NoteID = "2:8" class = "note" src = "../Imgs/TornPage.png" id = "note5">
-        <img NoteID = "2:9" class = "note" src = "../Imgs/TornPage.png" id = "note6">
-        <img NoteID = "2:10" class = "note" src = "../Imgs/TornPage.png" id = "note7">
+        <img draggable = "false" NoteID = "2:4" class = "note" src = "../Imgs/TornPage.png" id = "note1">
+        <img draggable = "false" NoteID = "2:5" class = "note" src = "../Imgs/TornPage.png" id = "note2">
+        <img draggable = "false" NoteID = "2:6" class = "note" src = "../Imgs/TornPage.png" id = "note3">
+        <img draggable = "false" NoteID = "2:7" class = "note" src = "../Imgs/TornPage.png" id = "note4">
+        <img draggable = "false" NoteID = "2:8" class = "note" src = "../Imgs/TornPage.png" id = "note5">
+        <img draggable = "false" NoteID = "2:9" class = "note" src = "../Imgs/TornPage.png" id = "note6">
+        <img draggable = "false" NoteID = "2:10" class = "note" src = "../Imgs/TornPage.png" id = "note7">
         <div id = "Door" Link= "/HTML/stair.html"></div>
     </div>
     <script src = "../JS/Index.js"></script>
