--- a/HTML/index3_2.html
+++ b/HTML/index3_2.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/index3_2.css">
+    <link rel = "stylesheet" href = "../Css/index3_2.css">
 </head>
 <body>
     <div id = "Background">
-        <img NoteID = "3:5" class = "note" id = "note1" src = "../Imgs/TornPage.png">
-        <img NoteID = "3:6" class = "note" id = "note2" src = "../Imgs/TornPage.png">
-        <img NoteID = "3:7" class = "note" id = "note3" src = "../Imgs/TornPage.png">
-        <img NoteID = "3:8" class = "note" id = "note4" src = "../Imgs/TornPage.png">
-        <img NoteID = "3:9" class = "note" id = "note5" src = "../Imgs/TornPage.png">
+        <img draggable = "false" NoteID = "3:5" class = "note" id = "note1" src = "../Imgs/TornPage.png">
+        <img draggable = "false" NoteID = "3:6" class = "note" id = "note2" src = "../Imgs/TornPage.png">
+        <img draggable = "false" NoteID = "3:7" class = "note" id = "note3" src = "../Imgs/TornPage.png">
+        <img draggable = "false" NoteID = "3:8" class = "note" id = "note4" src = "../Imgs/TornPage.png">
+        <img draggable = "false" NoteID = "3:9" class = "note" id = "note5" src = "../Imgs/TornPage.png">
         <div id = "Door" Link = "/index.html"></div>
 
     </div>
     
-    <script src="../JS/Index.js"></script>
+    <script src = "../JS/Index.js"></script>
 </body>
 </html>
