--- a/HTML/stair.html
+++ b/HTML/stair.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/stairs.css">
+    <link rel = "stylesheet" href = "../Css/stairs.css">
 </head>
 <body>
     <div id = "Background">
-        <img NoteID = "1:4" class = "note" id="note" src = "../Imgs/TornPage.png">
+        <img draggable = "false" NoteID = "1:4" class = "note" id = "note" src = "../Imgs/TornPage.png">
         <div id = "Door" Link=/HTML/index2_3.html></div>
     </div>   
-    <script src="../JS/Index.js"></script>
+    <script src = "../JS/Index.js"></script>
 </body>
 </html>
